--- a/_posts/2018-08-31-notes.md
+++ b/_posts/2018-08-31-notes.md
@@ -10,14 +10,23 @@ _source :[]  返回全部的字段，id:"",自动创建一个id值
 
 DAO :data access object
 
-1.当项目在服务器上启动时，我们在浏览器上输入https://localhost:8080/项目名/hello，tomcat服务器会根据加载的web.xml，找到url-pattern进行拦截，并交给配置好的名字为HelloWeb的这个servlet，真实的类是DispatcherServlet；
+1.当项目在服务器上启动时，
+我们在浏览器上输入https://localhost:8080/项目名/hello，
+tomcat服务器会根据加载的web.xml，找到url-pattern进行拦截，
+并交给配置好的名字为HelloWeb的这个servlet，真实的类是DispatcherServlet；
 
-2.然后DispatcherServlet根据相应的配置文件HelloWeb-servlet.xml，由于配置了自动扫描context:component-scan，所以自动识别到controller；
+2.然后DispatcherServlet根据相应的配置文件HelloWeb-servlet.xml，
+由于配置了自动扫描context:component-scan，
+所以自动识别到controller；
 
-3.然后spring的HandlerMapping根据@RequestMapping，将url根目录后面的子路径进行匹配，找到HelloController，并交给默认的printHello()方法运行；
+3.然后spring的HandlerMapping根据@RequestMapping，
+将url根目录后面的子路径进行匹配，找到HelloController，并交给默认的printHello()方法运行；
 
 4.运行结果返回的"hello"被解析为对应视图显示
 
-先加载web.xml，根据url-pattern 进行拦截，将其交给定义好的servlet，servlet配置的类名为DispatcherServlet，再去找 DispatcherServlet配置的servlet.xml，识别controller，根据controller中的RequestMapping，将url后面的子路径进行匹配,运行完返回给对应的试图(view)
+先加载web.xml，根据url-pattern 进行拦截，
+将其交给定义好的servlet，servlet配置的类名为DispatcherServlet，
+再去找 DispatcherServlet配置的servlet.xml，
+识别controller，根据controller中的RequestMapping，将url后面的子路径进行匹配,运行完返回给对应的试图(view)
 
 @RequestMapping(value = "/index", method = RequestMethod.GET) value :路径，method:请求的方式
